--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
 
   ],
   "require": {
-    "php": ">=5.4.0",
-    "laravel/laravel": "~5.1"
+    "php": ">=5.4.0"
   },
   "autoload": {
     "psr-4": {
